--- a/playbooks/roles/jenkins_analytics/tasks/main.yml
+++ b/playbooks/roles/jenkins_analytics/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- hostname:
+    name: "{{ JENKINS_SERVER_NAME }}"
+    when: "{{ JENKINS_SERVER_NAME }}" != ''
+
 - name: install jenkins analytics extra system packages
   apt:
     pkg={{ item }} state=present update_cache=yes
