--- a/playbooks/roles/jenkins_analytics/tasks/main.yml
+++ b/playbooks/roles/jenkins_analytics/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 
-- hostname:
-    name: "{{ JENKINS_SERVER_NAME }}"
-    when: "{{ JENKINS_SERVER_NAME }}" != ''
+- name: Setting the hostname
+  hostname:
+    name: "{{ jenkins_host_name }}"
 
 - name: install jenkins analytics extra system packages
   apt:
@@ -21,7 +21,7 @@
     - jenkins-auth
 
 - copy:
-    src: '{{ AUTOMATION_PRIVATE_KEY_SOURCE_PATH }}'
+    src: '{{ JENKINS_ANALYTICS_AUTOMATION_PRIVATE_KEY_SOURCE_PATH }}'
     dest: '{{ jenkins_private_keyfile }}'
     owner: '{{ jenkins_user }}'
     group: '{{ jenkins_group }}'
@@ -30,7 +30,7 @@
     - jenkins-auth
 
 - copy:
-    src: '{{ AUTOMATION_PUBLIC_KEY_SOURCE_PATH }}'
+    src: '{{ JENKINS_ANALYTICS_AUTOMATION_PUBLIC_KEY_SOURCE_PATH }}'
     dest: '{{ jenkins_public_keyfile }}'
     owner: '{{ jenkins_user }}'
     group: '{{ jenkins_group }}'
