--- a/playbooks/roles/jenkins_analytics/defaults/main.yml
+++ b/playbooks/roles/jenkins_analytics/defaults/main.yml
@@ -11,7 +11,7 @@ jenkins_port: 8080
 jenkins_nginx_port: 80
 jenkins_protocol_https: true
 AUTOMATION_USER: 'edx-analytics-automation'
-jenkins_host_name: "{{ analytics | default('jenkins') }}"
+jenkins_host_name: "{{ JENKINS_SERVER_NAME | default('jenkins') }}"
 
 JENKINS_VOLUMES: []
 
